[package]
name = "clonk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.12.9", features = ["json", "cookies", "multipart"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
